2006-05-15  Stefan Jahn  <stefan@lkcc.org>

	* complex.cpp: Finally fixed the complex arccos() function.

2006-05-14  Stefan Jahn  <stefan@lkcc.org>

	* hbsolver.cpp: Added TODO list for the HB solver.

2006-05-11  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Allow diode's 'M'
	parameter in the range 0..2.

2006-05-01  Stefan Jahn  <stefan@lkcc.org>

	* hbsolver.cpp: Fixed calculation of the requested number
	of harmonics.
	Excitation sources must be shunted by a 100 Ohm resistor in
	parallel, not just shunting the ports of the sources to ground.
	Dividing constant excitation currents by 2 (except DC), 
	multiplying balanced current by 2 (except DC) for the final
	solution.
	The FFT values must be physically interpreted for discrete
	frequencies, those divided by the number of complex samples.  The
	IFFT value are left as is.

	* dcsolver.cpp: Running restartDC() for each non-linear circuit
	if a fallback algorithm is used to solve the netlist.

	* circuit.h (class circuit): Allow non-linear circuits to
	re-initialize their DC iteration properly by a restartDC()
	callback.

2006-04-27  Stefan Jahn  <stefan@lkcc.org>

	* hbsolver.cpp: Tried and applied yet another algorithm to
	find the final solution of the balanced network.  Seems like
	working now.  Using an extended MNA matrix with the excitation
	voltage sources in the matrix as well.

	* trsolver.cpp: Activated the 'relaxTSR' option.  Can be set to
	relax the exact breakpoint (for the requested time step raster)
	targeting.

2006-04-26  Stefan Jahn  <stefan@lkcc.org>

	* hbsolver.cpp: Tried to fix the final solution after
	balancing correctly.  Not yet working...

	* fourier.cpp: Fixed a bug in the FFT routine.  Also added
	a 1d-FFT and 1d-IFFT for two real valued vectors handled in
	a single FFT run.

2006-04-25  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: Added '*=' and '/=' operators for scalar
	arguments.

	* hbsolver.cpp: Non-linear equations system is now smoothly