@@ -23,6 +23,9 @@ unfixed) have a look at the file BUGS.
 
 (completed tasks are indented one tab)
 
+- Implementation of some basic binary operations for binary data like
+  and, or, xor, etc. in the equation solver.
+- Support for binary (digital simulation) data in datasets.
 	- Implement open/short in S-parameter component during DC.
 - Support for touchstone as an export file format in the Qucs Converter.
 - Translate switches in spice netlists in the netlist converter.
