@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
  * Boston, MA 02110-1301, USA.  
  *
- * $Id: iac.cpp,v 1.11 2006/02/22 11:43:57 raimi Exp $
+ * $Id: iac.cpp,v 1.12 2006/05/23 09:48:32 raimi Exp $
  *
  */
 
@@ -70,6 +70,6 @@ void iac::calcTR (nr_double_t t) {
   nr_double_t p = getPropertyDouble ("Phase");
   nr_double_t d = getPropertyDouble ("Theta");
   nr_double_t a = getPropertyDouble ("I");
-  nr_double_t i = a * exp (-d * t) * sin (2 * M_PI * f * t + rad (p));
+  nr_double_t i = a * exp (-d * t * f) * sin (2 * M_PI * f * t + rad (p));
   setI (NODE_1, +i); setI (NODE_2, -i);
 }
