@@ -1,3 +1,8 @@
+2006-05-22  Stefan Jahn  <stefan@lkcc.org>
+
+	* check_spice.cpp: Fixed 'Theta' damping factor of sinusoidal
+	sources.
+
 2006-05-15  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucsconv.cpp: Fixed segfault bug when there is no vcd
